OCT-707 Remove typechain & remove ethers & update wagmi & update walletconnect && OCT-701 Current GLM and ETH balances are not correctly fetched && OCT-719 Earn view hangs on loading history if wallet not connected

--- a/client/.env.template
+++ b/client/.env.template
@@ -1,4 +1,5 @@
 SECRET_WORDS=test test test test test test test test test test test junk
+VITE_ALCHEMY_ID=
 VITE_CRYPTO_VALUES_ENDPOINT=https://crypto-server.octant.world/
 VITE_DEPOSITS_ADDRESS=
 VITE_EPOCHS_ADDRESS=
