--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dev": "yarn install && vite",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
+    "generate-abi-typings": "abi-types-generator src/hooks/contracts/abi/Deposits.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Epochs.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/ERC20.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Proposals.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Vault.json --output=src/hooks/contracts/typings --provider=web3",
     "install:rootpackages": "cd .. && yarn install && cd client",
     "predev": "yarn install:rootpackages && yarn install",
     "preinstall": "yarn install:rootpackages",
@@ -33,13 +34,14 @@
     "@ethersproject/providers": "^5.7.2",
     "@loadable/component": "^5.15.3",
     "@tanstack/react-query": "^4.29.17",
-    "@web3modal/ethereum": "2.2.2",
-    "@web3modal/react": "2.2.2",
+    "@web3modal/ethereum": "2.7.1",
+    "@web3modal/react": "2.7.1",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
+    "ethereum-abi-types-generator": "^1.3.3",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.17",
     "graphql": "^16.7.1",
@@ -47,7 +49,6 @@
     "i18next": "^23.2.3",
     "lodash": "^4.17.21",
     "minidenticons": "^4.2.0",
-    "octant-typechain-types": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
@@ -56,9 +57,11 @@
     "react-select": "^5.7.3",
     "react-slider": "^2.0.6",
     "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.6.1",
     "reselect": "^4.1.8",
-    "wagmi": "^0.12.13",
+    "socket.io-client": "^4.6.1",
+    "viem": "^1.4.1",
+    "wagmi": "^1.3.9",
+    "web3": "^4.0.3",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
