OCT-713: Update proposals

--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,17 @@
   },
   "license": "GPL-3.0",
   "scripts": {
+    "prebuild": "yarn types:json",
     "build": "vite build",
     "build:staging": "vite build --mode staging",
     "codegen": "graphql-codegen --config codegen.ts",
+    "types:json": "yarn run json2ts -i './src/resources/schema/' -o 'src/types/gen' --cwd './src/resources/schema'",
     "dev": "yarn install && vite",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "generate-abi-typings": "abi-types-generator src/hooks/contracts/abi/Deposits.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Epochs.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/ERC20.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Proposals.json --output=src/hooks/contracts/typings --provider=web3 && abi-types-generator src/hooks/contracts/abi/Vault.json --output=src/hooks/contracts/typings --provider=web3",
     "install:rootpackages": "cd .. && yarn install && cd client",
-    "predev": "yarn install:rootpackages && yarn install",
+    "predev": "yarn install:rootpackages && yarn install && yarn types:json",
     "preinstall": "yarn install:rootpackages",
     "prettier": "yarn prettier:js --loglevel silent && yarn prettier:ts --loglevel silent",
     "prettier:js": "yarn prettier:js:pure './**/*.{js,jsx}'",
@@ -99,6 +101,7 @@
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "json-schema-to-typescript": "^13.0.2",
     "prettier": "^2.8.8",
     "regenerator-runtime": "^0.13.11",
     "rollup-plugin-visualizer": "^5.9.2",
