--- a/contracts-v1/package.json
+++ b/contracts-v1/package.json
@@ -28,6 +28,7 @@
     "prettier:ts": "yarn prettier:ts:pure './**/*.{ts,tsx}'",
     "prettier:ts:pure": "prettier --parser typescript --write",
     "start-node": "anvil --chain-id 1337 --gas-limit 50000000 --mnemonic 'test test test test test test test test test test test junk'",
+    "status": "npx hardhat --network localhost status",
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
     "type-check": "tsc --noEmit true",
     "verify:goerli": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat --network goerli etherscan-verify --license GPL-3.0",
