FEAT: Epoch 0 GLM claiming

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -22,3 +22,8 @@ SCHEDULER_ENABLED=
 SCHEDULER_API_ENABLED=
 TESTNET_MULTISIG_PRIVATE_KEY=
 VAULT_CONFIRM_WITHDRAWALS_ENABLED=
+
+GLM_CLAIM_ENABLED=
+GLM_SENDER_ADDRESS=
+GLM_SENDER_PRIVATE_KEY=
+GLM_SENDER_NONCE=
