--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,7 +30,6 @@ freezegun = "^1.2.2"
 flake8 = "^6.0.0" 
 flake8-bugbear = "^23.7.10"
 flake8-pyproject = "^1.2.3"
-# flake8-sqlalchemy = "^0.1.0"
 
 [tool.poetry.group.prod]
 optional = true
@@ -41,6 +40,7 @@ gunicorn = "^20.1.0"
 
 [tool.black]
 line-length = 88
+exclude = "migrations" 
 
 [tool.flake8]
 max-line-length = 88
