fix: don't rely on semver for typescript version
```
yarn run v1.22.19
$ eslint './**/*.{js,jsx,ts,tsx}'
=============

WARNING: You are currently running a version of TypeScript which is not officially supported by @typescript-eslint/typescript-estree.

You may find that it works just fine, or you may not.

SUPPORTED TYPESCRIPT VERSIONS: >=3.3.1 <5.1.0

YOUR TYPESCRIPT VERSION: 5.1.6

Please only submit bug reports when using the officially supported version.
```

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "typescript": "^5.0.2"
+    "typescript": "5.0.2"
   }
 }
