--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,7 +27,7 @@ pytest-mock = "^3.10.0"
 black = "^23.3.0"
 pytest-cov = "^4.0.0"
 freezegun = "^1.2.2"
-flake8 = "^6.0.0" 
+flake8 = "^6.0.0"
 flake8-bugbear = "^23.7.10"
 flake8-pyproject = "^1.2.3"
 
@@ -40,7 +40,12 @@ gunicorn = "^20.1.0"
 
 [tool.black]
 line-length = 88
-exclude = "migrations" 
+exclude = '''
+/(
+  \.venv
+  | migrations
+)/
+'''
 
 [tool.flake8]
 max-line-length = 88
