--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ flask-cors = "^4.0.0"
 flask-migrate = "^4.0.4"
 flask-socketio = "^5.3.3"
 flask-restx = "^1.1.0"
+jsonschema = "4.17.3" # quick fix until https://github.com/python-restx/flask-restx/issues/553 is resolved
 flask-apscheduler = "^1.12.4"
 gql = { extras = ["aiohttp"], version = "^3.4.0" }
 requests = "^2.28.2"
