fix: change postgres port for octant in docker-compose setting
This removes a conflict with the same port being used by
Graph's postgres. This problem occures only in local env
when octant is running inside docker-compose. In prod both
graph and octant databases are inside the same instance,
so no conflict there.

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -9,13 +9,16 @@ services:
     build: .
     ports:
       - '5000:5000'
+    environment:
+      OCTANT_ENV: compose
+      DB_URI: "postgresql://user:password@db:5433/octant"
     depends_on:
       - db
 
   db:
     image: 'postgres:13'
     ports:
-      - '5432:5432'
+      - '5433:5432'
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
