--- a/contracts-v1/.env.template
+++ b/contracts-v1/.env.template
@@ -1,4 +1,8 @@
-PROPOSALS_CID=
 TESTNET_RPC_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
-TESTNET_PRIVATE_KEY=
+TESTNET_DEPLOYER_PRIVATE_KEY=
+TESTNET_MULTISIG_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
+
+MULTISIG_ADDRESS=
+PROPOSALS_CID=
+PROPOSALS_ADDRESSES=
