--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -3,12 +3,29 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
+    name: Epochs
+    network: localhost
+    source:
+      abi: Epochs
+      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - Epoch
+      abis:
+        - name: Epochs
+          file: ./abis/Epochs.json
+      file: ./src/epochs.ts
+      blockHandlers:
+        - handler: handleBlock
+  - kind: ethereum
     name: Deposits
-    network: sepolia
+    network: localhost
     source:
       abi: Deposits
-      address: "0x20cE1d488D7740C83DdBA78CD3789A2c2e337188"
-      startBlock: 3910975
+      address: "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -27,3 +44,22 @@ dataSources:
         - event: Unlocked(uint256,uint256,uint256,address)
           handler: handleUnlocked
       file: ./src/deposits.ts
+  - kind: ethereum
+    name: Vault
+    network: localhost
+    source:
+      abi: Vault
+      address: "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - Withdrawal
+      abis:
+        - name: Vault
+          file: ./abis/Vault.json
+      eventHandlers:
+        - event: Withdrawn(address,uint256,uint256)
+          handler: handleWithdrawn
+      file: ./src/vault.ts
