--- a/contracts-v1/.env.template
+++ b/contracts-v1/.env.template
@@ -1,8 +1,10 @@
 TESTNET_RPC_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
-TESTNET_DEPLOYER_PRIVATE_KEY=
-TESTNET_MULTISIG_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
 
+TESTNET_DEPLOYER_PRIVATE_KEY=
+
 MULTISIG_ADDRESS=
-PROPOSALS_CID=
-PROPOSALS_ADDRESSES=
+TESTNET_MULTISIG_PRIVATE_KEY=
+
+PROPOSALS_CID=QmXq3Eaz5xQF51J7mWzxDmfrVjDuGdhnirthttJ9Q2WTF8
+PROPOSALS_ADDRESSES=0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9
