--- a/client/package.json
+++ b/client/package.json
@@ -34,76 +34,76 @@
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@loadable/component": "^5.15.3",
-    "@tanstack/react-query": "^4.29.17",
+    "@tanstack/react-query": "^4.35.0",
     "@web3modal/ethereum": "2.7.1",
     "@web3modal/react": "2.7.1",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
-    "formik": "^2.4.2",
-    "framer-motion": "^10.12.17",
-    "graphql": "^16.7.1",
+    "formik": "^2.4.4",
+    "framer-motion": "^10.16.4",
+    "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
-    "i18next": "^23.2.3",
+    "i18next": "^23.5.1",
     "lodash": "^4.17.21",
     "minidenticons": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1",
+    "react-i18next": "^13.2.2",
     "react-infinite-scroller": "^1.2.6",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.15.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.6.1",
-    "viem": "^1.4.1",
-    "wagmi": "^1.3.9",
+    "socket.io-client": "^4.7.2",
+    "viem": "^1.10.8",
+    "wagmi": "^1.4.1",
     "yup": "^1.2.0",
-    "zustand": "^4.3.8"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/eslint-parser": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@graphql-codegen/cli": "4.0.1",
-    "@graphql-codegen/client-preset": "^4.0.1",
-    "@synthetixio/synpress": "^3.7.1",
+    "@babel/core": "^7.22.15",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@synthetixio/synpress": "^3.7.2-beta.7",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/jest": "^29.5.4",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@types/react-slider": "^1.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "@vitejs/plugin-react": "4.0.4",
     "chai-colors": "^1.0.1",
     "css-mediaquery": "^0.1.2",
-    "cypress-vite": "^1.4.0",
-    "eslint": "8.43.0",
+    "cypress-vite": "^1.4.2",
+    "eslint": "8.48.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-cypress": "^2.14.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-typescript-sort-keys": "^2.3.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "json-schema-to-typescript": "^13.0.2",
-    "prettier": "^2.8.8",
-    "regenerator-runtime": "^0.13.11",
+    "eslint-plugin-typescript-sort-keys": "^3.0.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "json-schema-to-typescript": "^13.1.1",
+    "prettier": "^3.0.3",
+    "regenerator-runtime": "^0.14.0",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.63.6",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "sass": "^1.66.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html-config": "^1.0.11"
   },
