--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -315,7 +315,14 @@ Deploy contracts:
     - !reference [.rules, on_push_to_default_branch ]
     - !reference [.rules, on_push_to_master_branch ]
   variables:
-    NETWORK: sepolia
+    NETWORK: 'sepolia'
+    GLM_ADDRESS: '0x71432DD1ae7DB41706ee6a22148446087BdD0906'
+    GNT_ADDRESS: '0xE6de13D64F6036E4E3f5fC84B5EB620C5C7c1050'
+    MULTISIG_ADDRESS: '0x1042952cdbe3b36fDbeC833372bEF265d7B32ABb'
+    PROPOSALS_ADDRESSES: '0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9'
+    PROPOSALS_CID: QmXq3Eaz5xQF51J7mWzxDmfrVjDuGdhnirthttJ9Q2WTF8
+    DECISION_WINDOW: 9000 # 2.5h
+    EPOCH_DURATION: 10800 # 3.0h
   artifacts:
     reports:
       dotenv: build.env
@@ -341,6 +348,8 @@ Cypress E2E Tests Epoch 1:
     CI: "true"
     METAMASK_VERSION: "10.25.0"
     SECRET_WORDS: test test test test test test test test test test test junk
+    SNAPSHOTTER_ENABLED: "true"
+    SCHEDULER_ENABLED: "false"
   artifacts:
     when: on_failure
     name: cypress
@@ -414,6 +423,9 @@ Deploy MR App:
     - .deploy
   variables:
     ENV_TYPE: "mr"
+    SNAPSHOTTER_ENABLED: "true"
+    SCHEDULER_ENABLED: "false"
+    REDEPLOY_SUBGRAPH: "true"
   rules:
     - !reference [.rules, on_mr_manual]
   environment:
@@ -426,6 +438,10 @@ Deploy UAT App:
     - .deploy
   variables:
     ENV_TYPE: "uat"
+    SNAPSHOTTER_ENABLED: "true"
+    SCHEDULER_ENABLED: "true"
+    GLM_CLAIM_ENABLED: "true"
+    VAULT_CONFIRM_WITHDRAWALS_ENABLED: "true"
   rules:
     - !reference [.rules, on_mr_manual]
     - !reference [.rules, on_push_to_default_branch_manual]
@@ -434,6 +450,24 @@ Deploy UAT App:
     url: https://uat-client.octant.wildland.dev
     deployment_tier: testing
     on_stop: Destroy UAT App
+
+Deploy Master App:
+  extends:
+    - .deploy
+  variables:
+    ENV_TYPE: "master"
+    SNAPSHOTTER_ENABLED: "true"
+    SCHEDULER_ENABLED: "true"
+    GLM_CLAIM_ENABLED: "true"
+    VAULT_CONFIRM_WITHDRAWALS_ENABLED: "true"
+  rules:
+    - !reference [.rules, on_mr_manual]
+    - !reference [.rules, on_push_to_default_branch_manual]
+  environment:
+    name: persistent/master
+    url: https://master-client.octant.wildland.dev
+    deployment_tier: testing
+    on_stop: Destroy Master App
 
 Destroy MR App:
   extends:
@@ -454,10 +488,23 @@ Destroy UAT App:
     ENV_TYPE: "uat"
   rules:
     - !reference [.rules, on_mr_manual]
-    - !reference [ .rules, on_push_to_default_branch_manual ]
+    - !reference [.rules, on_push_to_default_branch_manual]
   needs: []
   environment:
     name: persistent/uat
+    deployment_tier: testing
+
+Destroy Master App:
+  extends:
+    - .destroy
+  variables:
+    ENV_TYPE: "master"
+  rules:
+    - !reference [.rules, on_mr_manual]
+    - !reference [.rules, on_push_to_default_branch_manual]
+  needs: []
+  environment:
+    name: persistent/master
     deployment_tier: testing
 
 Deploy Release Candidate app:
