--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ requests = "^2.28.2"
 web3 = "^6.5.0"
 multiproof = {git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.2"}
 dataclass-wizard = "^0.22.2"
+flask-caching = "^2.0.2"
 eventlet = "^0.33.3"
 
 [tool.poetry.group.dev.dependencies]
