--- a/ci/Dockerfile.coin-prices-server
+++ b/ci/Dockerfile.coin-prices-server
@@ -1,4 +1,4 @@
-FROM local-docker-registry.wildland.dev/library/node:16-alpine AS root
+FROM node:16-alpine AS root
 WORKDIR /app
 COPY package.json yarn.lock ./
 
