--- a/contracts-v1/package.json
+++ b/contracts-v1/package.json
@@ -19,6 +19,7 @@
     "increase-time": "npx hardhat --network localhost increase-time",
     "install:rootpackages": "cd .. && yarn install && cd contracts-v1",
     "lint": "npx solhint 'contracts/**/*.sol'",
+    "next-epoch": "npx hardhat --network localhost next-epoch",
     "postinstall": "rm -r ./node_modules/@nomiclabs/hardhat-ethers && cp -R ./node_modules/hardhat-deploy-ethers ./node_modules/@nomiclabs/hardhat-ethers",
     "preinstall": "yarn install:rootpackages",
     "prepare-local-test-env": "npx hardhat --network localhost prepare-local-test-env",
@@ -70,6 +71,7 @@
     "@types/node": ">=12.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "axios": "^1.4.0",
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
     "dotenv": "^10.0.0",
